# dsl

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  MANIFEST.in  Makefile  README.md  TODO.md  TODO.txt  docker-compose.test.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  routes.yaml  run_example.py  setup.cfg  setup.py  src.md  start_rtsp_server.sh  start_test_stream.sh  test_import.py  test_monitoring.py  test_monitoring_files.py  test_rtsp_ansible.yml  test_rtsp_stream.py  todois.txt
.github/workflows/: ci.yml  docker.yml  publish.yml  release.yml  tests.yml
camel_router/: cli.py  config.py  engine.py  exceptions.py  processors.py  utils.py
dialogchain/: __init__.py  cli.py  processors.py
docs/: api.md  deployment.md  examples.md  monitoring.md  troubleshooting.md
edge-computing/: .gitignore  Makefile  README.md
edge-computing/ansible/: README.md  site.yml
edge-computing/ansible/group_vars/all/: vars.yml  vault.yml
edge-computing/ansible/inventory/: hosts.ini
edge-computing/ansible/roles/backup/tasks/: main.yml
edge-computing/ansible/roles/backup/templates/: backup.sh.j2
edge-computing/ansible/roles/common/tasks/: main.yml
edge-computing/ansible/roles/docker/tasks/: main.yml
edge-computing/ansible/roles/gitea/tasks/: main.yml
edge-computing/ansible/roles/gitea/templates/: docker-compose.yml.j2
edge-computing/ansible/roles/monitoring/tasks/: main.yml
edge-computing/ansible/roles/monitoring/templates/: docker-compose.yml.j2  telegraf.conf.j2
edge-computing/ansible/roles/node_red/tasks/: main.yml
edge-computing/ansible/roles/node_red/templates/: docker-compose.yml.j2
edge-computing/ansible/roles/portainer/tasks/: main.yml
edge-computing/ansible/roles/portainer/templates/: docker-compose.yml.j2
edge-computing/ansible/roles/security/tasks/: main.yml
endpoints/: Makefile  README.md  docker-compose.yml  inventory.ini  test.yml
endpoints/grpc/: Makefile  README.md  example_pb2.py  example_pb2_grpc.py  test_client.py
endpoints/grpc/ansible/: test.yml  test_grpc.py  test_playbook.yml
endpoints/grpc/docker/: Dockerfile  client.py  requirements.txt  server.py
endpoints/grpc/protos/: example.proto
endpoints/http/: Makefile
endpoints/http/ansible/: test.yml
endpoints/http/docker/: Dockerfile  app.py
endpoints/mqtt/: Makefile
endpoints/mqtt/ansible/: test.yml  test_mqtt.py
endpoints/mqtt/docker/: Dockerfile  mosquitto.conf
endpoints/rtsp/: Makefile
endpoints/rtsp/ansible/: test.yml  test_rtsp.py
endpoints/rtsp/docker/: Dockerfile  rtsp-simple-server.yml  start.sh
endpoints/webrtc/: Makefile
endpoints/webrtc/ansible/: test.yml  test_webrtc.py
endpoints/webrtc/docker/: Dockerfile  package.json  server.js
endpoints/webrtc/docker/public/: index.html
examples/: .gitignore  Dockerfile  README-invoices.md  README.md  camera_routes.md  camera_routes.yaml  docker-compose.yml  grpc_routes.md  grpc_routes.yaml  iot_routes.md  iot_routes.yaml  run_dev.sh  simple_routes.md  simple_routes.yaml
examples/ansible/: README.md  playbook.yml
examples/ansible/group_vars/: all.yml
examples/ansible/inventory/: localhost.ini
examples/ansible/templates/email-invoices/: .env.j2
examples/ansible/templates/web-invoices/: .env.j2
examples/basic/: Examples.yaml
examples/email-invoices/: .env.example  .gitignore  Makefile  README.md  process_invoices.py  process_invoices.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
examples/email-invoices/config/: config.json.example
examples/email-invoices/email_processor/: __init__.py  process_invoices.py
examples/email-invoices/tests/: __init__.py  test_email_processor.py
examples/shared/: __init__.py
examples/shared/utils/: config_loader.py  local_ocr.py
examples/test_scripts/: check_environment.sh  load_test_emails.sh  setup_test_environment.sh  test_email_processor_integration.py
examples/web-invoices/: .env.example  Makefile  README.md  process_web_invoices.py  process_web_invoices.yaml  requirements.txt  web_invoice_processor.py
examples/web-invoices/config/: config.json.example
k8s/: deployment.yaml
monitoring/: dashboard.js  index.html  style.css
scripts/: Cargo.toml (Rust Project)  alerting.js  cpp_processor.cpp  extract_markdown.py  grpc_ml_client.py  image_processor.go  package.json  process_markdown.py  run_mock_camera.sh  sensor_analytics.py
scripts/edge-computing/: manage.sh
scripts/examples/: setup_dev.sh
scripts/test/: test_grpc.sh
src/: Advanced_Configuration.py  Basic_Structure.py  Destination_URIs.py  Environment_Variables.py  Metrics_and_Monitoring.py  Troubleshooting.py  detect_objects.py  grpc_ml_client.py  process_markdown_blocks.py  requirementstxt.py  scriptsgomod.py  scriptssrcdata_preprocessorrs_Rust.py  setup.py  testsfixturessample_datajson.py  teststest_connectorspy.py  teststest_enginepy.py
src/api/: Error_Handling.py  External_Processor_Interface.py  Source_URIs.py
src/camel_router/: __init__.py  cli.py  config.py  connectors.py  engine.py
src/cli/: CLI_Reference.py
src/config/: Global_Settings.py
src/connectors/: camel_routerutilspy.py
src/core/: Configuration_Schema.py  Core_Classes.py  Processors.py
src/dialogchain/: connectors.py  engine.py  exceptions.py  py.typed
src/examples/: examplescamera_routesyaml.py
src/go/: health_check.go
src/js/: alerting.js  business_rules.js
src/rust/: Cargo.toml
src/scripts/: pyprojecttoml.py
src/utils/: process_markdown.py
tests/: __init__.py  conftest.py  test_cli.py  test_connectors.py  test_engine.py  test_processors.py  teststest_clipy.py  teststest_enginepy.py  teststest_processorspy.py
tests/fixtures/: sample_data.json  test_routes.yaml
tests/unit/: test_core.py
tests/unit/connectors/: test_connectors.py
tests/unit/core/: test_engine.py  test_processors.py
todo/: 1.md  2.md  3.md  4.md
venv311/: pyvenv.cfg
(+1 files in other folders)
