[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dialogchain"
version = "0.1.2"
description = "DialogChain - A flexible and extensible dialog processing framework"
authors = ["DialogChain Team <team@dialogchain.org>"]
readme = "README.md"
license = "Apache-2.0"
packages = [
    { include = "dialogchain", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/dialogchain/python"
"Bug Tracker" = "https://github.com/dialogchain/python/issues"

[tool.poetry.dependencies]
python = "^3.8,<3.12"
click = "^8.0.0"
pyyaml = "^6.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.0"
"asyncio-mqtt" = "^0.13.0"
grpcio = "^1.50.0"
"grpcio-tools" = "^1.50.0"
jinja2 = "^3.1.0"
"opencv-python" = "^4.7.0"
numpy = "^1.21.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
flake8 = "^5.0.0"
flake8-bugbear = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.0.0"
pre-commit = "^3.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
coverage = {extras = ["toml"], version = "^7.0.0"}
codecov = "^2.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.0.0"
sphinx-rtd-theme = "^1.2.0"
myst-parser = "^0.17.0"

[tool.poetry.group.ml.dependencies]
ultralytics = "^8.0.0"
torch = "^1.13.0"
tensorflow = "^2.11.0"
scikit-learn = "^1.2.0"

[project.scripts]
dialogchain = "dialogchain.cli:main"

[project.urls]
Homepage = "https://github.com/taskinity/dialogchain"
Documentation = "https://dialogchain.readthedocs.io"
Repository = "https://github.com/taskinity/dialogchain"
Issues = "https://github.com/taskinity/dialogchain/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dialogchain*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503"
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=camel_router --cov-report=term-missing"
asyncio_mode = "auto"