[metadata]
description-file = README.md

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.venv,venv
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
profile = black
line_length = 88
known_first_party = taskinity

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
show_error_context = True
show_column_numbers = True

[coverage:run]
source = src
branch = True
omit = 
    */tests/*
    */__pycache__/*
    */.venv/*
    */venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    @(abc\.)?abstractmethod
