[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-invoice-processor"
version = "0.1.0"
description = "Email invoice processor with OCR capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Taskinity Team", email = "team@taskinity.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting"
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.8.0",
    "pdf2image>=1.16.3",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "python-dateutil>=2.8.2",
    "email-validator>=2.0.0",
    "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "flake8>=6.1.0",
    "black>=24.3.0",
    "isort>=5.13.2",
    "mypy>=1.7.0",
    "types-python-dateutil>=2.8.19.14",
    "types-Pillow>=10.0.3",
    "types-PyYAML>=6.0.12.12",
    "types-requests>=2.31.0.1"
]

[tool.setuptools]
packages = ["email_processor"]
package-dir = { "" = "." }

[project.scripts]
email-processor = "email_processor.process_invoices:main"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true
